tests/ui/issues/issue-43988.stderr
error[E0539]: malformed `inline` attribute input
  --> $DIR/issue-43988.rs:10:5
   |
LL |     #[inline(XYZ)]
   |     ^^^^^^^^^---^^
   |              |
   |              valid arguments are `always` or `never`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[inline(XYZ)]
LL +     #[inline(always|never)]
   |
LL -     #[inline(XYZ)]
LL +     #[inline]
   |

error[E0552]: unrecognized representation hint
  --> $DIR/issue-43988.rs:14:12
   |
LL |     #[repr(nothing)]
   |            ^^^^^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0552]: unrecognized representation hint
  --> $DIR/issue-43988.rs:18:12
   |
LL |     #[repr(something_not_real)]
   |            ^^^^^^^^^^^^^^^^^^
   |
   = help: valid reprs are `Rust` (default), `C`, `align`, `packed`, `transparent`, `simd`, `i8`, `u8`, `i16`, `u16`, `i32`, `u32`, `i64`, `u64`, `i128`, `u128`, `isize`, `usize`

error[E0539]: malformed `repr` attribute input
  --> $DIR/issue-43988.rs:24:5
   |
LL |     #[repr]
   |     ^^^^^^^
   |     |
   |     expected this to be a list
   |     help: must be of the form: `#[repr(C)]`

error[E0539]: malformed `inline` attribute input
  --> $DIR/issue-43988.rs:30:5
   |
LL |     #[inline(ABC)]
   |     ^^^^^^^^^---^^
   |              |
   |              valid arguments are `always` or `never`
   |
help: try changing it to one of the following valid forms of the attribute
   |
LL -     #[inline(ABC)]
LL +     #[inline(always|never)]
   |
LL -     #[inline(ABC)]
LL +     #[inline]
   |

error[E0539]: malformed `repr` attribute input
  --> $DIR/issue-43988.rs:34:14
   |
LL |     let _z = #[repr] 1;
   |              ^^^^^^^
   |              |
   |              expected this to be a list
   |              help: must be of the form: `#[repr(C)]`

error[E0518]: attribute should be applied to function or closure
  --> $DIR/issue-43988.rs:5:5
   |
LL |     #[inline]
   |     ^^^^^^^^^
LL |     let _a = 4;
   |     ----------- not a function or closure

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0518, E0539, E0552.
For more information about an error, try `rustc --explain E0518`.
